# rutstedbytes-life

./: Cargo.toml  README.md  build.rs
.github/workflows/: build-binary-windows.yml
src/: life.cl  main.rs
