[package]
name = "rutstedbytes-life"
version = "0.1.0"
edition = "2024"

[dependencies]
minifb = "0.28.0"
ocl = "0.19.7"
rand = "0.9.1"
clap = { version = "4.0", features = ["derive"] }


[target.'cfg(windows)'.dependencies]
temp-file = "0.1.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
